# walkingpad

./: SPEC.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.mac.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/ble/: connection.rs  protocol.rs
src-tauri/src/db/: session.rs
src/components/: Dashboard.tsx  DeviceScanner.tsx  MetricsBar.tsx  ModeControl.tsx  Preferences.tsx  SessionHistory.tsx  SpeedChart.tsx  SpeedControl.tsx
src/lib/: tauri.ts  units.ts
src/store/: padStore.ts
